--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ __pycache__/
 
 # Data files (optional, if dataset is large)
 *.pkl
+*.csv
+*.h5
+*.keras
+*.joblib
 
 # Jupyter Notebook checkpoints
 .ipynb_checkpoints/
@@ -15,3 +19,10 @@ __pycache__/
 # OS-specific files
 .DS_Store
 Thumbs.db
+
+# Logs
+*.log
+
+# PyCharm/VSCode settings (optional)
+.idea/
+.vscode/
