--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,10 @@ matplotlib
 seaborn
 scikit-learn
 torch
-tensorflow==2.20.0
+tensorflow==2.19.1
 joblib
 h5py
 jupyter
 ipykernel
-streamlit
+streamlit==1.22.0
 protobuf==3.20.3
